fixed survey banner alignment and hid first separator #314

--- a/src/static/src/scss/survey/_banner.scss
+++ b/src/static/src/scss/survey/_banner.scss
@@ -9,7 +9,7 @@
 }
 
 .dmb-survey-banner {
-  align-items: flex-start;
+  align-items: center;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
